# OmniKee

./: Dockerfile  README.md  justfile
.github/workflows/: release.yml
lib/: Cargo.toml  build.sh
lib/.vim/: coc-settings.json
lib/src/: database.rs  exchange.rs  icon.rs  lib.rs  source.rs
tauri/: Cargo.toml  build.sh  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/src/: lib.rs
www/: README.md  components.d.ts  eslint.config.js  package-lock.json  package.json  quasar.config.ts  tsconfig.json  typed-router.d.ts
www/src/: App.vue  env.d.ts  omnikee.ts
www/src/assets/: demo.kdbx
www/src/components/: FieldInput.vue  Menu.vue  TOTPField.vue
www/src/components/database/: DatabaseOverview.vue  DatabaseUnlock.vue
www/src/components/window/: WindowButtons.vue
www/src/css/: app.scss  quasar.variables.sass
www/src/layouts/: MainLayout.vue
www/src/pages/: IndexPage.vue  index.vue
www/src/pages/database/: [i].vue
www/src/pages/database/[i]/: index.vue
www/src/pages/database/[i]/entry/: [uuid].vue
www/src/router/: index.ts
www/src/stores/: app.ts  databases.ts  index.ts  view.ts
