[package]
name = "omnikee-lib"
version = "0.1.0"
edition = "2024"

[features]
tauri = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
keepass = { version = "0.7.32", features = ["save_kdbx4", "serialization"] }

serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2"

# dependency feature overrides for keepass
getrandom = { version = "0.3.2", features = ["wasm_js"] }
uuid = { version = "1.16.0", features = ["rng-getrandom"] }
anyhow = "1.0.98"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4.40", features = ["wasmbind"] }
tsify = { version = "0.5.5", features = ["js"] }


[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
