[package]
name = "omnikee-lib"
version = "0.1.0"
edition = "2024"

[features]
tauri = ["dep:tauri", "dep:tauri-plugin-fs"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
keepass = { version = "0.8.3", features = ["save_kdbx4", "serialization", "totp"] }

# tauri-specific, for better OS integration
tauri-plugin-fs = { version = "2.2.1", optional = true }
tauri = { version = "2.5.1", optional = true }

# needed for cross compilation
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
tsify = { version = "0.5.5", features = ["js"] }

# dependency feature overrides for keepass
chrono = { version = "0.4.40", features = ["wasmbind"] }
getrandom = { version = "0.3.2", features = ["wasm_js"] }
uuid = { version = "1.16.0", features = ["rng-getrandom"] }
