[package]
name = "omnikee"
version = "0.0.1"
description = "KeePass UI using web technologies"
authors = ["Stefan Seemayer <stefan@seemayer.de>"]
license = "AGPL"
repository = ""
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4.1", features = [] }
tauri-plugin-log = "2.0.0-rc"

omnikee-lib = { path = "../lib", features = ["tauri"] }
tauri-plugin-opener = "2"
